--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html> 
 <html> 
  <head>
-  <title>Page Title</title> 
+    <link rel="stylesheet" href="style.css">
+  <title>Meerin Villasukat</title> 
  </head> 
 <body> 
- <h1>My First Heading</h1> 
+ <h1>Meerin Villasukat</h1> 
  <p>My first paragraph.</p> 
 </body> 
 </html>
