--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <head>
     <link rel="stylesheet" href="style.css">
   <title>Meerin Villasukat</title> 
+  <meta name="keywords" 
  </head> 
 <body> 
  <h1>Meerin Villasukat</h1> 
