--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
  <head>
     <link rel="stylesheet" href="style.css">
   <title>Meerin Villasukat</title> 
-  <meta name="keywords" 
+  <meta name="keywords" content="meerin villasukat, villasukat"> 
  </head> 
 <body> 
  <h1>Meerin Villasukat</h1> 
  <p>My first paragraph.</p> 
+ <a href="galleria.html">Kuvagalleria</a>
+
 </body> 
 </html>
