--- a/Galleria.html
+++ b/Galleria.html
@@ -3,7 +3,7 @@
  <head>
     <link rel="stylesheet" href="style.css">
   <title>Meerin Villasukat - Kuvagalleria</title> 
-  <meta name="keywords" 
+  <meta name="keywords"> 
  </head> 
 <body> 
  <h1>Kuvagalleria</h1> 
