--- a/Galleria.html
+++ b/Galleria.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html> 
 <html> 
  <head>
-    <link rel="stylesheet" href="style.css">
+  <meta charset = "utf-8">
+  <link rel="stylesheet" href="style.css">
   <title>Meerin Villasukat - Kuvagalleria</title> 
-  <meta name="keywords"> 
  </head> 
 <body> 
  <h1>Kuvagalleria</h1> 
  <p>Katso kuvia töistäni!</p> 
+
  <h2>Villasukat</h2>
  <h2>Pehmolelut</h2>
  <h2>Sekalaiset</h2>
+
+ <a href="index.html">Takaisin etusivulle</a>
 </body> 
 </html>
