--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html> 
 <html> 
  <head>
-    <link rel="stylesheet" href="style.css">
+  <meta charset = "utf-8">
+  <link rel="stylesheet" href="style.css">
   <title>Meerin Villasukat</title> 
   <meta name="keywords" content="meerin villasukat, villasukat"> 
  </head> 
 <body> 
- <h1>Meerin Villasukat</h1> 
- <p>My first paragraph.</p> 
  <a href="galleria.html">Kuvagalleria</a>
+ <a href="historia.html">Historia</a>
+ <h1>Meerin Villasukat</h1> 
+ <p>Tervetuloa nauttimaan sukista... tai jotain.</p> 
+ 
 
 </body> 
 </html>
