--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body> 
  <a href="galleria.html">Kuvagalleria</a>
  <a href="historia.html">Historia</a>
+ <a href="yhteystiedot.html">Yhteystiedot</a>
  <h1>Meerin Villasukat</h1> 
  <p>Tervetuloa nauttimaan sukista... tai jotain.</p> 
  
