--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -7,9 +7,8 @@
  </head>
 <body>
 <h1>Yhteystiedot</h1>
-<p></p>
-
-
-    <a href="index.html">Takaisin etusivulle</a>
+<p>Senkin stalkkeri...</p>
+<a href="https://www.instagram.com/meeririri/">Instagram</a> <br>
+<a href="index.html">Takaisin etusivulle</a>
 
 </body>
