--- a/Galleria.html
+++ b/Galleria.html
@@ -8,10 +8,15 @@
 <body> 
  <h1>Kuvagalleria</h1> 
  <p>Katso kuvia töistäni!</p> 
+ <p><a href="#Lelut">Hyppää tästä suoraan pehmoleluihin!</a></p>
+ <p><a href="#Seka">Hyppää tästä suoraan sekalaisiin!</a></p>
 
  <h2>Villasukat</h2>
- <h2>Pehmolelut</h2>
- <h2>Sekalaiset</h2>
+ <p> Tähän <br> massiivinen <br> määrä <br> kuvia <br> kuvateksteineen <br></p>
+ <h2 id="Lelut">Pehmolelut</h2>
+ <p> Tähän <br> massiivinen <br> määrä <br> kuvia<br> kuvateksteineen <br></p>
+ <h2 id="Seka">Sekalaiset</h2>
+ <p> Tähän <br> massiivinen <br> määrä <br> kuvia<br> kuvateksteineen <br></p>
 
  <a href="index.html">Takaisin etusivulle</a>
 </body> 
