--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
  <a href="galleria.html">Kuvagalleria</a>
  <a href="historia.html">Historia</a>
  <a href="yhteystiedot.html">Yhteystiedot</a>
+ <a href="muuta kivaa.html">Muuta asiaan liittyvää</a>
  <h1>Meerin Villasukat</h1> 
  <p>Tervetuloa nauttimaan sukista... tai jotain.</p> 
  
