historia sivu päivitetty

--- a/historia.html
+++ b/historia.html
@@ -7,9 +7,43 @@
  </head>
 <body>
 <h1>Kuinka kaikki alkoi?</h1>
-<p> Kun minä olin nuori, niin blaablaa mummini opetti minua neulomaan jne Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
+<p><em>”Nyt neulot patalapun”, ”Nyt neulot kaulahuivin” ja ”Nyt neulot neulegraffitin”.</em> Vihasin neulomista ala- sekä yläasteella eikä ihmekään. 
+    Jokainen kerta, kun määrättiin neulomaan, työnä oli poikkeuksetta aivan pirun tylsä suoran läpyskän neulominen. Etenkin sen kaulahuivin 
+    neulomiseen meni ikuisuus ja se oli sitä yhtä ja samaa silmukka silmukalta. </p>
 
-    <a href="index.html">Takaisin etusivulle</a>
+<p>Mummini oli kova tekemään käsitöitä ja häneltä sai perinteisesti jouluisin villasukkia. Mummini sai minut innostumaan neulomisesta. 
+    Hän neuloi jotakin missä oli palmikkoa. Se oli minun silmääni jännän näköistä ja pyysin häntä opettamaan palmikon neulomisen minulle. 
+    Opin palmikon neulomisen nopeasti ja se innosti minua neulomaan lisää.
+<br>
+    *tähän kuva siitä palmikko harjoituksesta vai onko se purettu?
+    </p>
 
+<p>Löysin käsityölehdistä mielenkiintoisen näköisiä villapaitojen ohjeita ja ryhdyin hommiin. Paitsi, että en ryhtynytkään koska ne 
+    kirjoitetut ohjeet olivat minun silmääni, kuin jotakin hepreaa. Mikä hemmetin ssk ja neulomatta nostaminen? Ai oho hups tätä 
+    neulekaaviota pitikin lukea alhaalta ylöspäin sekä oikealta vasemmalle. Voi perkule olenkin tehnyt jonkun virheen ja pitääkin 
+    purkaa noin kahden tunnin edestä työtä, että sen saa korjattua. Jossain vaiheessa eksyin katsomaan videon, jossa opastettiin jotakin 
+    tekniikkaa ja hoksasin, että ne videothan ovat äärimmäisen näppäriä.</p>
+
+<p>Putosin villasukkien kaninkoloon, kun löysin Novitan villasukka-tutoriaalin YouTubesta. Videota oli huomattavasti helpompi seurata 
+    ja käsittää mitä piti tehdä, kuin kirjoitettuja ohjeita, ainakin siinä vaiheessa, kun termit eivät olleet tuttuja. Jos joku kohta 
+    oli epäselvä katsoin ne hidastettuna ja toistin perässä. Sain ensimmäiset villasukkani neulottua ja totesin, että villasukathan on 
+    aika kivoja. Ne jaksaa oikeasti tehdä loppuun saakka toisin kuin joitakin villapaitoja, joita on vääntänyt jo toista ellei 
+    kolmattakin kuukautta. 
+<br>
+    *Tähän kuva niistä ekoista villasukista
+    </p>
+
+<p>Sitten aloin suoltamaan villasukkia niin maan perkuleesti, että jokaisella ystävälläni on varmaan jo kolme paria sukkia ja itselläni 
+    on varmaan joku parisenkymmentä. Olen villasukat jalassa käytännössä aina kunhan hellerajat ei pauku. Usein myös otan villasukat 
+    mukaan laukussa, jos menen kylään ja sukat eivät mahdu kenkiin. Mummini tykkäsi ihastella villasukkiani ja ihmetellä kanssani, miten 
+    ne olin tehnyt. Erityisesti hän tykkäsi minun vaaleanpunaisista palmikkovillasukistani ja kehui niitä vuolaasti.<br> *kuva pinkistä sukista </p>    
+
+<p>Kun mummini menehtyi neuloin hänelle taivasmatkasukat. En ole uskonnollinen, mutta koin taivasmatkasukat kauniina ajatuksena, 
+    erityisesti meidän neulomistaustamme ajatellen. Päätin neuloa hänelle nuo samaiset palmikkovillasukat mistä hän oli kovasti tykännyt, 
+    mutta asianmukaisesti valkoisella langalla. <br>
+    *Kuva pirkon keskeneräisistä sukista
+</p>
+
+<a href="index.html">Takaisin etusivulle</a>
 </body>
