--- a/muuta kivaa.html
+++ b/muuta kivaa.html
@@ -7,10 +7,15 @@
  </head> 
 <body> 
  <h1>Muuta asiaan liittyvää</h1>
+ 
  <h2> Lempi lankakauppani</h2>
  <h3>Menita</h3>
  <h3>Lankamaailma</h3>
- 
 
+ <h2>Parhaat ilmaiset ohjesivustot</h2>
+ <h3>Novita</h3>
+ <h3>Drops design</h3>
+ <h3>Ravelry</h3>
+ 
 </body> 
 </html>
