--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
  <a href="historia.html">Historia</a>
  <a href="yhteystiedot.html">Yhteystiedot</a>
  <a href="muuta kivaa.html">Muuta asiaan liittyvää</a>
+ <a href="ohjeet.html">Ohjeet</a>
  <h1>Meerin Villasukat</h1> 
  <p>Tervetuloa nauttimaan sukista... tai jotain.</p> 
  
