viewport yms muuta pientä

--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html> 
  <head>
   <meta charset = "utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Meerin Villasukat</title> 
   <meta name="keywords" content="meerin villasukat, villasukat"> 
  </head> 
 <body> 
+ <nav></nav>  
  <a href="galleria.html">Kuvagalleria</a>
  <a href="historia.html">Historia</a>
- <a href="yhteystiedot.html">Yhteystiedot</a>
- <a href="muuta kivaa.html">Muuta asiaan liittyvää</a>
  <a href="ohjeet.html">Ohjeet</a>
+ <a href="muuta kivaa.html">Muuta asiaan liittyvää</a>
+</nav>
  <h1>Meerin Villasukat</h1> 
  <p>Tervetuloa nauttimaan sukista... tai jotain.</p> 
  
