--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="meerin villasukat, villasukat"> 
  </head> 
 <body> 
- <nav></nav>  
+ <nav>  
  <a href="galleria.html">Kuvagalleria</a>
  <a href="historia.html">Historia</a>
  <a href="ohjeet.html">Ohjeet</a>
