--- a/ohjeet.html
+++ b/ohjeet.html
@@ -41,15 +41,15 @@
 
     <p>Tästä ohjeesta tulee koon 37 tai 38 sukat käsialastasi riippuen.
        Voit halutessasi myös käyttää jotakin muuta lankaa, joka on 100g/200m 
-       juoksuista, sillä se on saman paksuista kuin ohjeen suosittelema lanka.  </p>
+       juoksuista, sillä se on saman paksuista kuin ohjeen suosittelema lanka. 
+    </p>
 
     <p>Resori:<br>
         Aloita luomalla 48s. Jaa silmukat pienemmille 3,5mm puikoille 
         niin, että jokaisella puikolla on 12s. Neulo 2x2 resoria, eli 
         2 silmukkaa oikein ja sitten kaksi silmukkaa nurin ja niin edelleen. 
-        Kun resoria on 12 kerrosta tai 3,5cm se on valmis.
-         
-        </p>
+        Kun resoria on 12 kerrosta tai 3,5cm se on valmis. 
+    </p>
 
     <p>Varsi:<br>
         Vaihda käyttöön isommat 4mm puikot ja neulo kaksi kerrosta kaikki silmukat oikein.
@@ -59,8 +59,8 @@
         Tehosteväri tulee ottaa ”takaa”, että se tulee parhaiten neuloksessa 
         esille. Kiinnitä myös pitkät langanjuoksut, ettei neulokseen jää ikäviä 
         lankasilmukoita. Nyt kannattaa käyttää kerroslaskuria tai peittää tehdyt 
-        rivit, että pysyy parhaiten mukana.
-        </p>    
+        rivit, että pysyy parhaiten mukana. 
+    </p>    
 
 
 <a href="index.html">Takaisin etusivulle</a>
