--- a/Galleria.html
+++ b/Galleria.html
@@ -14,6 +14,9 @@
 
  <h2>Villasukat</h2>
  <p> Tähän <br> massiivinen <br> määrä <br> kuvia <br> kuvateksteineen <br></p>
+    <img src="/galleria/coxsocks.jpg" alt="Cox Socks">
+
+
  <h2 id="Lelut">Pehmolelut</h2>
  <p> Tähän <br> massiivinen <br> määrä <br> kuvia<br> kuvateksteineen <br></p>
  <h2 id="Seka">Sekalaiset</h2>
