--- a/muuta kivaa.html
+++ b/muuta kivaa.html
@@ -9,9 +9,13 @@
 <body> 
  <h1>Muuta asiaan liittyvää</h1>
  
- <h2> Lempi lankakauppani</h2>
+ <h2>Lempi lankakauppani</h2>
+
  <h3>Menita</h3>
+ <p>Menita on huikea lankakauppa, josta olen ensimmäiset lankakeräni aikoinani ostanut.  </p>
+
  <h3>Lankamaailma</h3>
+ <h3>Snurre</h3>
 
  <h2>Parhaat ilmaiset ohjesivustot</h2>
  <h3>Novita</h3>
