--- a/muuta kivaa.html
+++ b/muuta kivaa.html
@@ -9,18 +9,44 @@
 <body> 
  <h1>Muuta asiaan liittyvää</h1>
  
- <h2>Lempi lankakauppani</h2>
-
+ <h2>Suosikki lankakauppani</h2>
  <h3>Menita</h3>
- <p>Menita on huikea lankakauppa, josta olen ensimmäiset lankakeräni aikoinani ostanut.  </p>
+ <p>Menita on huikea pikku lankakauppa, josta olen ensimmäiset lankakeräni aikoinani ostanut. 
+    Tykkäsin erityisesti Helsingin Punavuoressa sijaitsevasta liikkeestä ja siellä usein kävinkin. 
+    Valitettavasti se on nykyisin suljettu. 
+    Menitalla on hyvä valikoima edullisia lankoja tiukalle budjetille. 
+    Löytyy toki myös parempiakin lankojakin jonkun verran.</p>
+    <a href="https://www.menita.fi">Menitan verkkokauppa</a>
 
  <h3>Lankamaailma</h3>
+ <p>Kun ensimmäistä kertaa astuin lankamaailmaan olin äimän käkenä. 
+    Liike totisesti oli nimensä mukaisesti lankojen maailma, lankoja oli sateenkaaren väreissä niin maan perkuleesti, että silmissä vilisi.
+    Uskomaton valikoima lankoja ihan kaikenlaisiin ja kaiken hintaisiin projekteihin. </p>
+    <a href=https://www.lankamaailma.fi>Lankamaailman verkkokauppa</a>
+
  <h3>Snurre</h3>
+ <p>Snurre on lankakauppojen karkkikauppa, oikea silmän ilo. 
+    Valikoima on laadukas ja erikoinen, täältä ei löydä Novitan perus lankoja ollenkaan. 
+    Tänne ei saa astua nälkäisenä, sillä se tulee pirun kalliiksi.</p>
+    <a href="https://www.snurre.fi">Snurren verkkokauppa</a>
 
  <h2>Parhaat ilmaiset ohjesivustot</h2>
  <h3>Novita</h3>
+ <p>Erinomaisia ohjeita erityisesti aloittelijoille. Selkeitä ja hyvin kirjoitettuja ohjeita.</p>
+ <a href="https://www.novitaknits.com/fi/neulemallit">Novitan ohjesivut</a>
+
  <h3>Drops design</h3>
+ <p>Laaja valikoima erikoisempiakin ohjeita. Haastavampaan makuun löytyy reilusti ohjeita.</p>
+ <a href="https://www.garnstudio.com/home.php?cid=11">Drops designin ohjesivut</a>
+
  <h3>Ravelry</h3>
+ <p>Jumalaton määrä eri henkilöiden kirjoittamia ohjeita. Täältä löytää ihan kaikkea taivaan ja maan väliltä. 
+    Ihan mitä vain osaatkaan kuvitella, joku on siitäkin vääntänyt jo ohjeet.
+    Ravelryssä on ohjeita myös myynnissä, eli kannattaa suodattaa hakutuloksia tarvittaessa. 
+    Itse nettisivut on kyllä aika huonot ja käyttäjätili on muistaakseni pakko tehdä.</p>
+ <a href="https://www.ravelry.com/patterns">Ravelryn ohjesivut</a> <br>  
+
+ <a href=index.html>Takaisin etusivulle</a>  
  
 </body> 
 </html>
