--- a/Galleria.html
+++ b/Galleria.html
@@ -22,6 +22,7 @@
  <h2 id="Seka">Sekalaiset</h2>
  <p> Tähän <br> massiivinen <br> määrä <br> kuvia<br> kuvateksteineen <br></p>
 
- <a href="index.html">Takaisin etusivulle</a>
+ <a href=index.html>
+   <button class="button-52" role="link">Takaisin etusivulle</button></a>
 </body> 
 </html>
