--- a/ohjeet.html
+++ b/ohjeet.html
@@ -63,6 +63,7 @@
     </p>    
 
 
-<a href="index.html">Takaisin etusivulle</a>
+    <a href=index.html>
+        <button class="button-52" role="link">Takaisin etusivulle</button></a>
 
 </body>
