--- a/historia.html
+++ b/historia.html
@@ -46,5 +46,6 @@
     *Kuva pirkon keskeneräisistä sukista
 </p>
 
-<a href="index.html">Takaisin etusivulle</a>
+<a href=index.html>
+    <button class="button-52" role="link">Takaisin etusivulle</button></a>
 </body>
