--- a/muuta kivaa.html
+++ b/muuta kivaa.html
@@ -46,7 +46,8 @@
     Itse nettisivut on kyllä aika huonot ja käyttäjätili on muistaakseni pakko tehdä.</p>
  <a href="https://www.ravelry.com/patterns">Ravelryn ohjesivut</a> <br>  
 
- <a href=index.html>Takaisin etusivulle</a>  
+ <a href=index.html>
+ <button class="button-52" role="link">Takaisin etusivulle</button></a>
  
 </body> 
 </html>
