--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <meta name="keywords" content="meerin villasukat, villasukat"> 
  </head> 
 <body> 
- <nav>  
- <a href="galleria.html">Kuvagalleria</a>
- <a href="historia.html">Historia</a>
- <a href="ohjeet.html">Ohjeet</a>
- <a href="muuta kivaa.html">Muuta asiaan liittyvää</a>
+ <nav class ="navigation">  
+ <a style="color: #ede7d9;" href="galleria.html">Kuvagalleria</a>
+ <a style="color: #ede7d9;" href="historia.html">Historia</a>
+ <a style="color: #ede7d9;" href="ohjeet.html">Ohjeet</a>
+ <a style="color: #ede7d9;" href="muuta kivaa.html">Muuta</a>
 </nav>
  <h1>Meerin Villasukat</h1> 
  <p>Tervetuloa nauttimaan sukista... tai jotain.</p> 
