--- a/Galleria.html
+++ b/Galleria.html
@@ -13,7 +13,7 @@
 
  <h2>Villasukat</h2>
  <p> Tähän <br> massiivinen <br> määrä <br> kuvia <br> kuvateksteineen <br></p>
-    <img src="/galleria/coxsocks.jpg" alt="Cox Socks">
+    <img src="https://previews.dropbox.com/p/thumb/ACCD2pwKi5ige-u4GHrh06TRnSw3XWC37erUmzyrLBN5BsQbHAWf2La-H6RCVfeBQ5q_sJn7P6w9nbGGs_XlGIRvClIczd08hibOwSWvzcx5eqIbTJDWpn2ROmhxNUnMKqWUmITvgG4ZncbcP139nZzdz7XBa3UTj39m8lLNlJdBmDqjFVhGceV8n9FylhXoGjSD6QSxuRwvtyr0chMOE9LVFoVtMoAKKm1ZW0Ppoe9LROywfusYya9BCXjfwM9XvKhxo7TMTsGM2F0krChbvwOqI3pZ1oiGo1xlvz0wiYp6d524BYwN2KLn1ZJUKjUgw7YONuOPBy8wa8PFKYAeem-T/p.jpeg" alt="Cox Socks">
 
 
  <h2 id="Lelut">Pehmolelut</h2>
