--- a/Galleria.html
+++ b/Galleria.html
@@ -12,8 +12,38 @@
  <p><a href="#Seka">Hyppää tästä suoraan sekalaisiin!</a></p>
 
  <h2>Villasukat</h2>
- <p> Tähän <br> massiivinen <br> määrä <br> kuvia <br> kuvateksteineen <br></p>
-    <img src="https://previews.dropbox.com/p/thumb/ACCD2pwKi5ige-u4GHrh06TRnSw3XWC37erUmzyrLBN5BsQbHAWf2La-H6RCVfeBQ5q_sJn7P6w9nbGGs_XlGIRvClIczd08hibOwSWvzcx5eqIbTJDWpn2ROmhxNUnMKqWUmITvgG4ZncbcP139nZzdz7XBa3UTj39m8lLNlJdBmDqjFVhGceV8n9FylhXoGjSD6QSxuRwvtyr0chMOE9LVFoVtMoAKKm1ZW0Ppoe9LROywfusYya9BCXjfwM9XvKhxo7TMTsGM2F0krChbvwOqI3pZ1oiGo1xlvz0wiYp6d524BYwN2KLn1ZJUKjUgw7YONuOPBy8wa8PFKYAeem-T/p.jpeg" alt="Cox Socks">
+
+   <h3>Cox Socks</h3>
+   <img src="https://www.dropbox.com/scl/fi/7tj2cfigcu5sior5ihtq3/CoxSocks.JPG?rlkey=ue4nxbxe5wc03ot3cfb6z4bbr&raw=1" alt="Cox Socks" width="90%">
+   <p>Tein nämä hieman ohjetta ohuemmalla langalla, joten jouduin modifioimaan sukkia. Älä ihmettele, jos omistasi tulee eri näköiset kun näistä.</p>
+   <a href="https://www.ravelry.com/patterns/library/cox-sox">Cox Socksien ilmainen ohje</a> <br>
+
+   <h3>Eripari samapari raitasukat</h3>
+   <img src="https://www.dropbox.com/scl/fi/xdnnt47rdp1exdn41zy8z/erisama.JPG?rlkey=04l5ehcpez8ng52alsp7veh1d&raw=1" alt="eripari samapari sukat" width="90%">
+   <p>Näihin ei ole ohjetta, freestyletin nämä ja en kirjoittanut ylös mitään. 
+      On kuitenkin helpot sukat tehdä itse perässä. 
+      Tekee päävärillä resorin ja kantapään ja sukan varressa ja jalassa vuorottelee värejä aina kahden silmukan jaksoissa.</p>
+
+   <h3>Kaiku sukat</h3>   
+   <img src="https://www.dropbox.com/scl/fi/dw5x3pfo2swzhnvuzl5vc/Kaiku.JPG?rlkey=bxyeha8vh4ieo7noihmqedq3u&raw=1" alt="Kaikusukat" width="90%">
+   <p>Jämälangoista vääntämäni kaiku-sukat. Rumat kuin synti. Sukkaperheen epäonnistunut esikoinen, joka riehuu Steissillä öisin ja on häpeäksi. 
+      Jos teet nämä perässä niin tee itsellesi palvelus ja jätä toi varvassysteemi tekemättä.</p>
+   <a href="https://www.lankava.fi/fi/ohje-neulotut-kaiku-sukat/">Kaiku-sukkien ilmainen ohje</a>   
+
+  <h3>Salmiakkiruutu sukat</h3>
+  <img src="https://www.dropbox.com/scl/fi/m7sk59ksxkezspvd9a9wy/salmiakki.JPG?rlkey=watrnqos2veknyboixsqpt78k&raw=1" alt="Salmiakkiruutu sukat" width="90%">
+  <p>Salmiakkiruutu kohoneuletta, hyvä perusmalli suosittelen. Kuvassa kohoneule erottuu huonommin, kuin luonnossa.</p>
+  <a href="https://www.novitaknits.com/fi/kohoneule-villasukat-novita-7-veljesta#attributesetPatterndetails">Salmiakkiruutu sukkien ilmainen ohje</a>
+
+  <h3>Sukan näköiset sukat</h3>
+  <img src="https://www.dropbox.com/scl/fi/dyl9752p8h0bvfywcgy6g/IMG_8028.JPG?rlkey=jqp8udf7s1tpw0cnqii4o6pur&raw=1" alt="tommonen joku sukka" width="90%">
+  <p>Tommoset sukat joissa vuorottelin kaks riviä värikästä lankaa ja yhden rivin tummaa. 
+   Värikkäillä riveillä sitten nostelin neulomatta jonkun ehkäpä viiden silmukan välein yhden tumman silmukan ja tollaset sukat siitä tuli.</p>
+
+   <h3>Kukka&sukka</h3>
+   <img src="https://www.dropbox.com/scl/fi/ilzpaqckh4xqidgwoyitk/kukka.JPG?rlkey=i3pj4yj74vazba9fcrm3vaf2s&raw=1" alt="kukka&sukka" width="90%">
+   
+
 
 
  <h2 id="Lelut">Pehmolelut</h2>
