--- a/Galleria.html
+++ b/Galleria.html
@@ -13,10 +13,20 @@
 
  <h2>Villasukat</h2>
 
+   <h3>Mun ensimmäiset villasukat!</h3>
+   <img src="https://www.dropbox.com/scl/fi/p0a8vwmvqex03idn1qiz7/ekat.JPG?rlkey=2n8nt22t9cj98feqaslp5eewz&raw=1" alt="Ensimmäiset sukat" width="90%">
+   <p>Mun ensimmäiset koskaan neulomani villasukat. 
+      Näistä en luovu vaikka onkin jo muutamaan otteeseen pitänyt paikata reikiä. 
+      Näitä neuloessa huomasin ensimmäisen sukan neulottuani, ettei ole muuten enää tarpeeksi lankaa toiseen. 
+      Lankaa säännöstelemällä sain onneksi tehtyä molemmat, siitä syystä toinen sukka on vähän lyhyempi ja pienempi.</p>
+   <a href="https://www.youtube.com/watch?v=QF6vlz6vRMw">Novitan video-ohje</a>
+
    <h3>Cox Socks</h3>
    <img src="https://www.dropbox.com/scl/fi/7tj2cfigcu5sior5ihtq3/CoxSocks.JPG?rlkey=ue4nxbxe5wc03ot3cfb6z4bbr&raw=1" alt="Cox Socks" width="90%">
-   <p>Tein nämä hieman ohjetta ohuemmalla langalla, joten jouduin modifioimaan sukkia. Älä ihmettele, jos omistasi tulee eri näköiset kun näistä.</p>
-   <a href="https://www.ravelry.com/patterns/library/cox-sox">Cox Socksien ilmainen ohje</a> <br>
+   <p>Uskomattoman tyylikkäät ja herkät villasukat.
+      Tein nämä hieman ohjetta ohuemmalla langalla, joten jouduin modifioimaan sukkia. 
+      Älä ihmettele, jos omistasi tulee eri näköiset kun näistä.</p>
+   <a href="https://www.ravelry.com/patterns/library/cox-sox">Cox Socksien ohje</a> <br>
 
    <h3>Eripari samapari raitasukat</h3>
    <img src="https://www.dropbox.com/scl/fi/xdnnt47rdp1exdn41zy8z/erisama.JPG?rlkey=04l5ehcpez8ng52alsp7veh1d&raw=1" alt="eripari samapari sukat" width="90%">
@@ -24,29 +34,64 @@
       On kuitenkin helpot sukat tehdä itse perässä. 
       Tekee päävärillä resorin ja kantapään ja sukan varressa ja jalassa vuorottelee värejä aina kahden silmukan jaksoissa.</p>
 
-   <h3>Kaiku sukat</h3>   
+   <h3>Kaiku-sukat</h3>   
    <img src="https://www.dropbox.com/scl/fi/dw5x3pfo2swzhnvuzl5vc/Kaiku.JPG?rlkey=bxyeha8vh4ieo7noihmqedq3u&raw=1" alt="Kaikusukat" width="90%">
-   <p>Jämälangoista vääntämäni kaiku-sukat. Rumat kuin synti. Sukkaperheen epäonnistunut esikoinen, joka riehuu Steissillä öisin ja on häpeäksi. 
+   <p>Jämälangoista vääntämäni kaiku-sukat. 
+      Rumat kuin synti. Sukkaperheen epäonnistunut esikoinen, joka riehuu Steissillä öisin ja on häpeäksi. 
       Jos teet nämä perässä niin tee itsellesi palvelus ja jätä toi varvassysteemi tekemättä.</p>
-   <a href="https://www.lankava.fi/fi/ohje-neulotut-kaiku-sukat/">Kaiku-sukkien ilmainen ohje</a>   
+   <a href="https://www.lankava.fi/fi/ohje-neulotut-kaiku-sukat/">Kaiku-sukkien ohje</a>   
 
-  <h3>Salmiakkiruutu sukat</h3>
-  <img src="https://www.dropbox.com/scl/fi/m7sk59ksxkezspvd9a9wy/salmiakki.JPG?rlkey=watrnqos2veknyboixsqpt78k&raw=1" alt="Salmiakkiruutu sukat" width="90%">
-  <p>Salmiakkiruutu kohoneuletta, hyvä perusmalli suosittelen. Kuvassa kohoneule erottuu huonommin, kuin luonnossa.</p>
-  <a href="https://www.novitaknits.com/fi/kohoneule-villasukat-novita-7-veljesta#attributesetPatterndetails">Salmiakkiruutu sukkien ilmainen ohje</a>
+   <h3>Salmiakkiruutu sukat</h3>
+   <img src="https://www.dropbox.com/scl/fi/m7sk59ksxkezspvd9a9wy/salmiakki.JPG?rlkey=watrnqos2veknyboixsqpt78k&raw=1" alt="Salmiakkiruutu sukat" width="90%">
+   <p>Salmiakkiruutu kohoneuletta, hyvä perusmalli suosittelen. Kuvassa kohoneule erottuu huonommin, kuin luonnossa.</p>
+   <a href="https://www.novitaknits.com/fi/kohoneule-villasukat-novita-7-veljesta#attributesetPatterndetails">Salmiakkiruutu sukkien ohje</a>
 
-  <h3>Sukan näköiset sukat</h3>
-  <img src="https://www.dropbox.com/scl/fi/dyl9752p8h0bvfywcgy6g/IMG_8028.JPG?rlkey=jqp8udf7s1tpw0cnqii4o6pur&raw=1" alt="tommonen joku sukka" width="90%">
-  <p>Tommoset sukat joissa vuorottelin kaks riviä värikästä lankaa ja yhden rivin tummaa. 
+   <h3>Sukan näköiset sukat</h3>
+   <img src="https://www.dropbox.com/scl/fi/dyl9752p8h0bvfywcgy6g/IMG_8028.JPG?rlkey=jqp8udf7s1tpw0cnqii4o6pur&raw=1" alt="tommonen joku sukka" width="90%">
+   <p>Tommoset sukat joissa vuorottelin kaks riviä värikästä lankaa ja yhden rivin tummaa. 
    Värikkäillä riveillä sitten nostelin neulomatta jonkun ehkäpä viiden silmukan välein yhden tumman silmukan ja tollaset sukat siitä tuli.</p>
 
    <h3>Kukka&sukka</h3>
    <img src="https://www.dropbox.com/scl/fi/ilzpaqckh4xqidgwoyitk/kukka.JPG?rlkey=i3pj4yj74vazba9fcrm3vaf2s&raw=1" alt="kukka&sukka" width="90%">
-   
+   <p>Perus nilkkasukat itsestäänraidoittuvasta langasta, johon lopuksi virkkasin ja kiinnitin kukkia. Ihan saatanan epäkäytännölliset, mutta on ainakin komeet.</p>
 
+   <h3>Perus villasukat</h3>
+   <img src="https://www.dropbox.com/scl/fi/amfo9y39mxhtmpc3tebaq/neon.JPG?rlkey=9n4u6wpcsflyl1nbpqf35dpje&raw=1" alt="Perussukat" width="90%">
+   <p>Villasukkien basic bitch. Ei mitään erikoista kikkailua, ainoastaan räikeä lanka.</p>
 
+   <h3>Vaahtokarkkisukat</h3>
+   <img src="https://www.dropbox.com/scl/fi/8i3oalun4r7ili3w0teze/Palmikko.JPG?rlkey=fu7ed1z7o27mqpl9r5ctfcrpk&raw=1" alt="Palmikkosukat" width="90%">
+   <p>Maailman nopeimmat ja kivat sukat tehdä. Ihankun laittaisi jalat hattaraan ton megapaksun langan takia.</p>
+   <a href="https://www.novitaknits.com/fi/villasukat-vaahtokarkki-novita-isoveli#attributesetPatterndetails">Ohje Vaahtokarkkisukkiin</a>
+
+   <h3>Pupusukat</h3>
+   <img src="https://www.dropbox.com/scl/fi/yhkihy60odcw338wn1sxk/IMG_8027.JPG?rlkey=3ryeb11j7jn3wg13puf2121vd&raw=1" alt="Pupusukat" width="90%">
+   <p>Oletko joskus laittanut villasukat jalkaan ja miettinyt, että näissä on kyllä aivan liian vähän korvia? 
+      En minäkään, mutta siinä ne nyt on!</p>
+   <a href="https://www.novitaknits.com/fi/neulotut-pitkavartiset-villasukat-novita-7-veljesta#attributesetPatterndetails">Ohjeet itse sukkiin</a> <br>  
+   <a href="https://www.meillakotona.fi/artikkelit/ovatko-nama-sopoimmat-sukat-ikina-neulo-pupusukat-itselle-tai-lapselle">Ohje kanin korviin</a>
+
+   <h3>Destiny: Hunter</h3>
+   <img src="https://www.dropbox.com/scl/fi/d7xk4ipqdoj2pxwnk0tp8/Hunter.JPG?rlkey=wqj8gnos4n9cz0jwohiohabqi&raw=1" alt="Hunter sukat" width="90%">
+   <p>Destiny pelisarjan fanille Hunter logolla sukat. Näihin tein vain perus miesten villasukat ja vartea varten googletin logon ruutupiirroksena.</p>
+
+   <h3>Körtti sukat</h3>
+   <img src="https://www.dropbox.com/scl/fi/nzgv3048bo65sl85gs068/kortti.JPG?rlkey=72tcoofkm7y7rfhtmvlz9oyak&raw=1" alt="Körttisukat" width="90%">
+   <p>Miesten körttisukat, tosi hauska, helppo ja rento malli neuloa.</p>
+   <a href="https://www.lankava.fi/fi/ohje-neulotut-kortti-villasukat/">ohje Körtti-villasukilla</a>
+
+   <h3>Muumipeikko</h3>
+   <img src="https://www.dropbox.com/scl/fi/m5f736cy9yitijrpkzrl8/muumi.JPG?rlkey=84v7d6z23sirnovk8ei8rcjnz&raw=1" alt="Muumisukat" width="90%">
+   <p>Maailman söpöimmät ja raivostuttavimmat villasukat. 
+      Nämä piti aloittaa alusta varmaan kolmesti. 
+      Näistä oli ohjeessa myös tarjolla vain lasten ja naisten koko. 
+      Ihan hirveä homma vääntää näistä miehelle sopivan kokoiset.<br> 
+      Ohje: Moomin X Novita-lehti Muumimamman lämpöiset asusteet (8,90€)</p>
 
  <h2 id="Lelut">Pehmolelut</h2>
+
+
+ 
  <p> Tähän <br> massiivinen <br> määrä <br> kuvia<br> kuvateksteineen <br></p>
  <h2 id="Seka">Sekalaiset</h2>
  <p> Tähän <br> massiivinen <br> määrä <br> kuvia<br> kuvateksteineen <br></p>
