--- a/Galleria.html
+++ b/Galleria.html
@@ -90,10 +90,32 @@
 
  <h2 id="Lelut">Pehmolelut</h2>
 
+   <h3>Järkyttävän surkea käärme? tai mato??</h3>
+<img src="https://www.dropbox.com/scl/fi/fb6h28sslal6oz2wmho5i/IMG_8039.JPG?rlkey=emma7xmt2n65ygow435g43it2&raw=1" alt="Käärme" width="90%">
+<p>Aloitetaan taas parhaimmasta. 
+   Jonkunlainen käärme, jonka olen vääntänyt pieni ikuisuus sitten. No toughts, just vibes.</p>   
 
- 
- <p> Tähän <br> massiivinen <br> määrä <br> kuvia<br> kuvateksteineen <br></p>
+   <h3>Jalaton lintu</h3>
+<img src="https://www.dropbox.com/scl/fi/6r992gfq634yhsv0iwo3n/IMG_8040.JPG?rlkey=m7r0w9jv7cfjfpp3w2yjlmxqn&raw=1" alt="Hienosto lintu, baskeri ja kaikki" width="90%">
+<p>Todennäköisesti Ranskalainen lintu, koska hänellä on baskeri. Fancy. <br> Ohjeet: Arne & Carlos - Neulotut linnut-kirja</p>
+
+<h3>Hirviö</h3>
+<img src="https://www.dropbox.com/scl/fi/t9l9o308knms553wbvqzu/IMG_8034.JPG?rlkey=j2lu76jaz6v3wpffph9qvar98&raw=1" alt="Hirviö" width="90%">
+<p>Symppis hirviö, mitä kerran tein kaverin kanssa meidän mummoklubissa. 
+   Ekologiset arvot ovat tälle hirviötyypille tärkeitä ja siksi hänet on tehty jämälangoista.</p>
+<a href="https://www.novitaknits.com/fi/lapsen-pikkuhirvio-lelu-novita-nalle-taika#attributesetPatterndetails">Ohje hirivöön</a>
+
+<h3>Totuudelle (ja kaikelle) sokea jänis</h3>
+<img src="https://www.dropbox.com/scl/fi/bjz7de3y37a9i2rxhmo6o/IMG_8037.JPG?rlkey=9ujs7nc52mfi1p7bk08qstesh&raw=1" alt="simätön jänis" width="90%">
+<p>Silmätön pupu katselee haikeana taivaalle, koska ei voi koskaan nähdä tähtiä.</p>
+
+<h3>Hullu Haamu</h3>
+<img src="https://www.dropbox.com/scl/fi/s4xjyhyxv0o3pccad2kio/IMG_8042.JPG?rlkey=ofqyvi86r72hlwvcy5k8qya48&raw=1" alt="Hullut päivät haamu" width="90%">
+<p>Mitä mitä, tunnettu maskottihaamu jo kahdessa Haaga-Helian projektissa mukana??? Tietäjät tietää ja ovat nähneet haamun Ammatillisen viestinnän kurssilla, osana työnhaku videotani.</p>
+
  <h2 id="Seka">Sekalaiset</h2>
+
+
  <p> Tähän <br> massiivinen <br> määrä <br> kuvia<br> kuvateksteineen <br></p>
 
  <a href=index.html>
