--- a/Galleria.html
+++ b/Galleria.html
@@ -71,6 +71,10 @@
    <a href="https://www.novitaknits.com/fi/neulotut-pitkavartiset-villasukat-novita-7-veljesta#attributesetPatterndetails">Ohjeet itse sukkiin</a> <br>  
    <a href="https://www.meillakotona.fi/artikkelit/ovatko-nama-sopoimmat-sukat-ikina-neulo-pupusukat-itselle-tai-lapselle">Ohje kanin korviin</a>
 
+   <h3>Socks fit for a queen</h3>
+   <img src="https://www.dropbox.com/scl/fi/ugmpnl5f76hb9g1nmor3r/dd99cade-92ab-4a1b-a1f1-03c4c7fd2929.jpg?rlkey=iwl8ieycy57a054hulmizba2f&raw=1" alt="Liilat sukat" width="80%">
+   <p>Ystävälle lahjaksi tehdyt sukat. Värit valitsin hänen luonteensa mukaan. Nirkkoreuna ja broken seed stitch kuvio.</p>
+
    <h3>Destiny: Hunter</h3>
    <img src="https://www.dropbox.com/scl/fi/d7xk4ipqdoj2pxwnk0tp8/Hunter.JPG?rlkey=wqj8gnos4n9cz0jwohiohabqi&raw=1" alt="Hunter sukat" width="90%">
    <p>Destiny pelisarjan fanille Hunter logolla sukat. Näihin tein vain perus miesten villasukat ja vartea varten googletin logon ruutupiirroksena.</p>
@@ -108,6 +112,10 @@
 <h3>Totuudelle (ja kaikelle) sokea jänis</h3>
 <img src="https://www.dropbox.com/scl/fi/bjz7de3y37a9i2rxhmo6o/IMG_8037.JPG?rlkey=9ujs7nc52mfi1p7bk08qstesh&raw=1" alt="simätön jänis" width="90%">
 <p>Silmätön pupu katselee haikeana taivaalle, koska ei voi koskaan nähdä tähtiä.</p>
+
+<h3>Pois muuttaneet käärmeet</h3>
+<img src="https://www.dropbox.com/scl/fi/mxwah5cqepf58o4cnw356/4ec0b50c-9d91-4da7-8f49-28ec68f998d5.jpg?rlkey=vlyxse8sfzl132ezw8hpbpjyn&raw=1" alt="Käärmeksi'" width="80%">
+<p>Kaverille lahjaksi tehdyt käärmeet. Ensin hän sai liilan kärmeen, mutta näki myöhemmin tekemäni pörhökäärmeen ja tilasi itselleen myös sellaisen.</p>
 
 <h3>Hullu Haamu</h3>
 <img src="https://www.dropbox.com/scl/fi/s4xjyhyxv0o3pccad2kio/IMG_8042.JPG?rlkey=ofqyvi86r72hlwvcy5k8qya48&raw=1" alt="Hullut päivät haamu" width="90%">
