--- a/Galleria.html
+++ b/Galleria.html
@@ -117,6 +117,11 @@
 <img src="https://www.dropbox.com/scl/fi/mxwah5cqepf58o4cnw356/4ec0b50c-9d91-4da7-8f49-28ec68f998d5.jpg?rlkey=vlyxse8sfzl132ezw8hpbpjyn&raw=1" alt="Käärmeksi'" width="80%">
 <p>Kaverille lahjaksi tehdyt käärmeet. Ensin hän sai liilan kärmeen, mutta näki myöhemmin tekemäni pörhökäärmeen ja tilasi itselleen myös sellaisen.</p>
 
+<h3>Pois muuttaneet sokea jänis ja og pörhökäärme</h3>
+<img src="https://www.dropbox.com/scl/fi/onbymw3gyuaelndbsl4ec/c6e643ce-7a56-466b-a09c-d13989dddaae.jpg?rlkey=ws100yeedxr69uzy84nnhnwqy&raw=1" alt="Käärme ja pupu" width="80%">
+<p>Kaverille lahjaksi annetut alkuperäinen pörhökäärme ja minimaalinen sokea jänis. 
+   Tämä on siis se käärmeiden valioyksilö, jonka pohjalta piti neuloa toinenkin.</p>
+
 <h3>Hullu Haamu</h3>
 <img src="https://www.dropbox.com/scl/fi/s4xjyhyxv0o3pccad2kio/IMG_8042.JPG?rlkey=ofqyvi86r72hlwvcy5k8qya48&raw=1" alt="Hullut päivät haamu" width="90%">
 <p>Mitä mitä, tunnettu maskottihaamu jo kahdessa Haaga-Helian projektissa mukana??? Tietäjät tietää ja ovat nähneet haamun Ammatillisen viestinnän kurssilla, osana työnhaku videotani.</p>
