--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
  </head> 
 <body> 
  <nav class ="navigation">  
+<img src="https://www.dropbox.com/scl/fi/h83v0vkveo1ngkinbdflv/paska-logo-kopio.jpg?rlkey=dq55lah21bewl17grgi3smfrw&raw=1" alt="Paska logo" width="10%"> 
+   
  <a style="color: #ede7d9;" href="galleria.html">Kuvagalleria</a>
  <a style="color: #ede7d9;" href="historia.html">Historia</a>
  <a style="color: #ede7d9;" href="ohjeet.html">Ohjeet</a>
@@ -16,7 +18,7 @@
 </nav>
  <h1>Meerin Villasukat</h1> 
  <p>Tervetuloa nauttimaan sukista... tai jotain.</p> 
- <img src="https://previews.dropbox.com/p/thumb/ACCD2pwKi5ige-u4GHrh06TRnSw3XWC37erUmzyrLBN5BsQbHAWf2La-H6RCVfeBQ5q_sJn7P6w9nbGGs_XlGIRvClIczd08hibOwSWvzcx5eqIbTJDWpn2ROmhxNUnMKqWUmITvgG4ZncbcP139nZzdz7XBa3UTj39m8lLNlJdBmDqjFVhGceV8n9FylhXoGjSD6QSxuRwvtyr0chMOE9LVFoVtMoAKKm1ZW0Ppoe9LROywfusYya9BCXjfwM9XvKhxo7TMTsGM2F0krChbvwOqI3pZ1oiGo1xlvz0wiYp6d524BYwN2KLn1ZJUKjUgw7YONuOPBy8wa8PFKYAeem-T/p.jpeg" alt="Cox Socks">
+ 
  
 
 </body> 
