--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
  <a style="color: #ede7d9;" href="muuta kivaa.html">Muuta</a>
 </nav>
  <h1>Meerin Villasukat</h1> 
- <p>Tervetuloa nauttimaan sukista... tai jotain.</p> 
- 
- 
+ <p>Tervetuloa nauttimaan tai vaihtoehtoisesti kärsimään mun villasukista, jos jouduit arvioimaan mun sivuston. <em>Sori...</em></p> 
+
+ <p>Nyt kun olet tänne eksynyt syystä tai toisesta, niin katso ihmeessä ympärillesi. 
+    Tämän sivuston sydän on ehdottomasti kuvagalleria. 
+    Sieltä pääset katselemaan mun tekemiä töitä.
+    Ohje sivulta pääset itsekin neulomaan. 
+    Historiasta voit lueskella mun lärpätyksiä. 
+    Muuta sivustolta pääset tsekkaamaan jotain mun suosikki liikkeitä ja nettisivuja. </p>
 
 </body> 
 </html>
