--- a/galleria.html
+++ b/galleria.html
@@ -5,14 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Meerin Villasukat - Kuvagalleria</title> 
+  <meta name="keywords" content="meerin villasukat, villasukat"> 
  </head> 
 <body> 
- <h1>Kuvagalleria</h1> 
- <hr>
+
+<header>
+   <img role="link" src="Gallerialoppu/Lopullinenpaska.png" alt="Logo" width="30px"><a href="index.html"></img>
+   <h1>Kuvagalleria</h1>
+   <hr>
+</header>
  <p><a href="#Lelut">Hyppää tästä suoraan pehmoleluihin!</a></p>
  <p><a href="#Seka">Hyppää tästä suoraan sekalaisiin!</a></p>
 
+
  <h2>Villasukat</h2>
+
 
    <h3>Mun ensimmäiset villasukat!</h3>
    <img src="https://www.dropbox.com/scl/fi/p0a8vwmvqex03idn1qiz7/ekat.JPG?rlkey=2n8nt22t9cj98feqaslp5eewz&raw=1" alt="Ensimmäiset sukat" width="90%">
