--- a/historia.html
+++ b/historia.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Meerin Villasukat - Historia</title> 
+    <meta name="keywords" content="meerin villasukat, villasukat"> 
  </head>
 <body>
 <h1>Kuinka kaikki alkoi?</h1>
