--- a/muuta kivaa.html
+++ b/muuta kivaa.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Meerin Villasukat - Muuta</title>  
+  <meta name="keywords" content="meerin villasukat, villasukat"> 
  </head> 
 <body> 
  <h1>Muuta asiaan liittyvää</h1>
