--- a/ohjeet.html
+++ b/ohjeet.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Meerin Villasukat - Ohjesivu</title> 
+    <meta name="keywords" content="meerin villasukat, villasukat"> 
  </head>
 <body>
     <h1>Ohjesivu</h1>
