--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
  </head> 
 <body> 
  <nav class ="navigation">  
-<img src="https://www.dropbox.com/scl/fi/h83v0vkveo1ngkinbdflv/paska-logo-kopio.jpg?rlkey=dq55lah21bewl17grgi3smfrw&raw=1" alt="Paska logo" width="10%"> 
+<img src="Gallerialoppu/LopullinenIsoLogo.png" alt="Paska logo" width="25%"> 
    
  <a style="color: #ede7d9;" href="galleria.html">Kuvagalleria</a>
  <a style="color: #ede7d9;" href="historia.html">Historia</a>
  <a style="color: #ede7d9;" href="ohjeet.html">Ohjeet</a>
  <a style="color: #ede7d9;" href="muuta kivaa.html">Muuta</a>
 </nav>
- <h1>Meerin Villasukat</h1> 
- <p>Tervetuloa nauttimaan tai vaihtoehtoisesti kärsimään mun villasukista, jos jouduit arvioimaan mun sivuston. <em>Sori...</em></p> 
+ <h1>Tervetuloa</h1> 
+ <p>Tule nauttimaan tai vaihtoehtoisesti kärsimään mun villasukista, jos olet täällä vasten tahtoasi. <em>Sori siitä...</em></p> 
 
  <p>Nyt kun olet tänne eksynyt syystä tai toisesta, niin katso ihmeessä ympärillesi. 
     Tämän sivuston sydän on ehdottomasti kuvagalleria. 
