--- a/muuta kivaa.html
+++ b/muuta kivaa.html
@@ -8,8 +8,10 @@
   <meta name="keywords" content="meerin villasukat, villasukat"> 
  </head> 
 <body> 
- <h1>Muuta asiaan liittyvää</h1>
- <hr>
+   <header>
+      <img role="link" src="Gallerialoppu/Lopullinenpaska.png" alt="Logo" width="30px"><a href="index.html"></img>
+      <h1>Muuta asiaan liittyvää</h1>
+   </header>
  
  <h2>Suosikki lankakauppani:</h2>
  <h3>Menita</h3>
