--- a/ohjeet.html
+++ b/ohjeet.html
@@ -4,12 +4,14 @@
     <meta charset = "utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Meerin Villasukat - Ohjesivu</title> 
+    <title>Meerin Villasukat - Ohjeet</title> 
     <meta name="keywords" content="meerin villasukat, villasukat"> 
  </head>
 <body>
-    <h1>Ohjesivu</h1>
-    <hr>
+<header>
+     <img role="link" src="Gallerialoppu/Lopullinenpaska.png" alt="Logo" width="30px"><a href="index.html"></img>
+     <h1>Ohjeet</h1>
+</header>
     
     <h2>&lt;!DOCTYPE socks&gt;</h2>
 
