--- a/historia.html
+++ b/historia.html
@@ -8,8 +8,11 @@
     <meta name="keywords" content="meerin villasukat, villasukat"> 
  </head>
 <body>
-<h1>Kuinka kaikki alkoi?</h1>
-<hr>
+
+<header>
+    <img role="link" src="Gallerialoppu/Lopullinenpaska.png" alt="Logo" width="30px"><a href="index.html"></img>
+    <h1>Kuinka kaikki alkoi?</h1>
+</header>
 
 <p><em>”Nyt neulot patalapun”, ”Nyt neulot kaulahuivin” ja ”Nyt neulot neulegraffitin”.</em> Vihasin neulomista ala- sekä yläasteella eikä ihmekään. 
     Jokainen kerta, kun määrättiin neulomaan, työnä oli poikkeuksetta aivan pirun tylsä suoran läpyskän neulominen. Etenkin sen kaulahuivin 
