--- a/galleria.html
+++ b/galleria.html
@@ -27,14 +27,14 @@
       Näistä en luovu vaikka onkin jo muutamaan otteeseen pitänyt paikata reikiä. 
       Näitä neuloessa huomasin ensimmäisen sukan neulottuani, ettei ole muuten enää tarpeeksi lankaa toiseen. 
       Lankaa säännöstelemällä sain onneksi tehtyä molemmat, siitä syystä toinen sukka on vähän lyhyempi ja pienempi.</p>
-   <a href="https://www.youtube.com/watch?v=QF6vlz6vRMw">Novitan video-ohje</a>
+   <a href="https://www.youtube.com/watch?v=QF6vlz6vRMw" target="_blank" rel="noopener noreferrer">Novitan video-ohje</a>
 
    <h3>Cox Socks</h3>
    <img src="https://www.dropbox.com/scl/fi/7tj2cfigcu5sior5ihtq3/CoxSocks.JPG?rlkey=ue4nxbxe5wc03ot3cfb6z4bbr&raw=1" alt="Cox Socks" width="90%">
    <p>Uskomattoman tyylikkäät ja herkät villasukat.
       Tein nämä hieman ohjetta ohuemmalla langalla, joten jouduin modifioimaan sukkia. 
       Älä ihmettele, jos omistasi tulee eri näköiset kun näistä.</p>
-   <a href="https://www.ravelry.com/patterns/library/cox-sox">Cox Socksien ohje</a> <br>
+   <a href="https://www.ravelry.com/patterns/library/cox-sox" target="_blank" rel="noopener noreferrer">Cox Socksien ohje</a> <br>
 
    <h3>Eripari samapari raitasukat</h3>
    <img src="https://www.dropbox.com/scl/fi/xdnnt47rdp1exdn41zy8z/erisama.JPG?rlkey=04l5ehcpez8ng52alsp7veh1d&raw=1" alt="eripari samapari sukat" width="90%">
@@ -47,12 +47,12 @@
    <p>Jämälangoista vääntämäni kaiku-sukat. 
       Rumat kuin synti. Sukkaperheen epäonnistunut esikoinen, joka riehuu Steissillä öisin ja on häpeäksi. 
       Jos teet nämä perässä niin tee itsellesi palvelus ja jätä toi varvassysteemi tekemättä.</p>
-   <a href="https://www.lankava.fi/fi/ohje-neulotut-kaiku-sukat/">Kaiku-sukkien ohje</a>   
+   <a href="https://www.lankava.fi/fi/ohje-neulotut-kaiku-sukat/" target="_blank" rel="noopener noreferrer">Kaiku-sukkien ohje</a>   
 
    <h3>Salmiakkiruutu sukat</h3>
    <img src="https://www.dropbox.com/scl/fi/m7sk59ksxkezspvd9a9wy/salmiakki.JPG?rlkey=watrnqos2veknyboixsqpt78k&raw=1" alt="Salmiakkiruutu sukat" width="90%">
    <p>Salmiakkiruutu kohoneuletta, hyvä perusmalli suosittelen. Kuvassa kohoneule erottuu huonommin, kuin luonnossa.</p>
-   <a href="https://www.novitaknits.com/fi/kohoneule-villasukat-novita-7-veljesta#attributesetPatterndetails">Salmiakkiruutu sukkien ohje</a>
+   <a href="https://www.novitaknits.com/fi/kohoneule-villasukat-novita-7-veljesta#attributesetPatterndetails" target="_blank" rel="noopener noreferrer">Salmiakkiruutu sukkien ohje</a>
 
    <h3>Sukan näköiset sukat</h3>
    <img src="https://www.dropbox.com/scl/fi/dyl9752p8h0bvfywcgy6g/IMG_8028.JPG?rlkey=jqp8udf7s1tpw0cnqii4o6pur&raw=1" alt="tommonen joku sukka" width="90%">
@@ -70,14 +70,14 @@
    <h3>Vaahtokarkkisukat</h3>
    <img src="https://www.dropbox.com/scl/fi/8i3oalun4r7ili3w0teze/Palmikko.JPG?rlkey=fu7ed1z7o27mqpl9r5ctfcrpk&raw=1" alt="Palmikkosukat" width="90%">
    <p>Maailman nopeimmat ja kivat sukat tehdä. Ihankun laittaisi jalat hattaraan ton megapaksun langan takia.</p>
-   <a href="https://www.novitaknits.com/fi/villasukat-vaahtokarkki-novita-isoveli#attributesetPatterndetails">Ohje Vaahtokarkkisukkiin</a>
+   <a href="https://www.novitaknits.com/fi/villasukat-vaahtokarkki-novita-isoveli#attributesetPatterndetails" target="_blank" rel="noopener noreferrer">Ohje Vaahtokarkkisukkiin</a>
 
    <h3>Pupusukat</h3>
    <img src="https://www.dropbox.com/scl/fi/yhkihy60odcw338wn1sxk/IMG_8027.JPG?rlkey=3ryeb11j7jn3wg13puf2121vd&raw=1" alt="Pupusukat" width="90%">
    <p>Oletko joskus laittanut villasukat jalkaan ja miettinyt, että näissä on kyllä aivan liian vähän korvia? 
       En minäkään, mutta siinä ne nyt on!</p>
-   <a href="https://www.novitaknits.com/fi/neulotut-pitkavartiset-villasukat-novita-7-veljesta#attributesetPatterndetails">Ohjeet itse sukkiin</a> <br>  
-   <a href="https://www.meillakotona.fi/artikkelit/ovatko-nama-sopoimmat-sukat-ikina-neulo-pupusukat-itselle-tai-lapselle">Ohje kanin korviin</a>
+   <a href="https://www.novitaknits.com/fi/neulotut-pitkavartiset-villasukat-novita-7-veljesta#attributesetPatterndetails" target="_blank" rel="noopener noreferrer">Ohjeet itse sukkiin</a> <br>  
+   <a href="https://www.meillakotona.fi/artikkelit/ovatko-nama-sopoimmat-sukat-ikina-neulo-pupusukat-itselle-tai-lapselle" target="_blank" rel="noopener noreferrer">Ohje kanin korviin</a>
 
    <h3>Socks fit for a queen</h3>
    <img src="https://www.dropbox.com/scl/fi/ugmpnl5f76hb9g1nmor3r/dd99cade-92ab-4a1b-a1f1-03c4c7fd2929.jpg?rlkey=iwl8ieycy57a054hulmizba2f&raw=1" alt="Liilat sukat" width="80%">
@@ -90,7 +90,7 @@
    <h3>Körtti sukat</h3>
    <img src="https://www.dropbox.com/scl/fi/nzgv3048bo65sl85gs068/kortti.JPG?rlkey=72tcoofkm7y7rfhtmvlz9oyak&raw=1" alt="Körttisukat" width="90%">
    <p>Miesten körttisukat, tosi hauska, helppo ja rento malli neuloa.</p>
-   <a href="https://www.lankava.fi/fi/ohje-neulotut-kortti-villasukat/">ohje Körtti-villasukilla</a>
+   <a href="https://www.lankava.fi/fi/ohje-neulotut-kortti-villasukat/" target="_blank" rel="noopener noreferrer">ohje Körtti-villasukilla</a>
 
    <h3>Muumipeikko</h3>
    <img src="https://www.dropbox.com/scl/fi/m5f736cy9yitijrpkzrl8/muumi.JPG?rlkey=84v7d6z23sirnovk8ei8rcjnz&raw=1" alt="Muumisukat" width="90%">
@@ -115,7 +115,7 @@
 <img src="https://www.dropbox.com/scl/fi/t9l9o308knms553wbvqzu/IMG_8034.JPG?rlkey=j2lu76jaz6v3wpffph9qvar98&raw=1" alt="Hirviö" width="90%">
 <p>Symppis hirviö, mitä kerran tein kaverin kanssa meidän mummoklubissa. 
    Ekologiset arvot ovat tälle hirviötyypille tärkeitä ja siksi hänet on tehty jämälangoista.</p>
-<a href="https://www.novitaknits.com/fi/lapsen-pikkuhirvio-lelu-novita-nalle-taika#attributesetPatterndetails">Ohje hirivöön</a>
+<a href="https://www.novitaknits.com/fi/lapsen-pikkuhirvio-lelu-novita-nalle-taika#attributesetPatterndetails" target="_blank" rel="noopener noreferrer">Ohje hirivöön</a>
 
 <h3>Totuudelle (ja kaikelle) sokea jänis</h3>
 <img src="https://www.dropbox.com/scl/fi/bjz7de3y37a9i2rxhmo6o/IMG_8037.JPG?rlkey=9ujs7nc52mfi1p7bk08qstesh&raw=1" alt="simätön jänis" width="90%">
