--- a/muuta kivaa.html
+++ b/muuta kivaa.html
@@ -20,7 +20,7 @@
     Valitettavasti se on nykyisin suljettu. 
     Menitalla on hyvä valikoima edullisia lankoja tiukalle budjetille. 
     Löytyy toki myös parempiakin lankojakin jonkun verran.</p>
-    <a href="https://www.menita.fi">Menitan verkkokauppa</a>
+    <a href="https://www.menita.fi" target="_blank" rel="noopener noreferrer">Menitan verkkokauppa</a>
     <p>Menitan Espoon putiikki</p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127125.41415416835!2d24.381242286718745!3d60.1420825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x468df4b55982a44d%3A0xde7a4cd1e0a461be!2sMenita%20Espoo!5e0!3m2!1sfi!2sfi!4v1696450990610!5m2!1sfi!2sfi" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
@@ -29,7 +29,7 @@
  <p>Kun ensimmäistä kertaa astuin lankamaailmaan olin äimän käkenä. 
     Liike totisesti oli nimensä mukaisesti lankojen maailma, lankoja oli sateenkaaren väreissä niin maan perkuleesti, että silmissä vilisi.
     Uskomaton valikoima lankoja ihan kaikenlaisiin ja kaiken hintaisiin projekteihin. </p>
-    <a href=https://www.lankamaailma.fi>Lankamaailman verkkokauppa</a>
+    <a href="https://www.lankamaailma.fi" target="_blank" rel="noopener noreferrer">Lankamaailman verkkokauppa</a>
     <p>Lankamaailman Helsingin putiikki</p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7924.519034100886!2d24.953237615218743!3d60.22822923874672!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469209b37c407361%3A0xe7a0a87df04087eb!2sLankamaailma%20Helsinki!5e0!3m2!1sfi!2sfi!4v1696450838540!5m2!1sfi!2sfi" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>   
 
@@ -37,25 +37,25 @@
  <p>Snurre on lankakauppojen karkkikauppa, oikea silmän ilo. 
     Valikoima on laadukas ja erikoinen, täältä ei löydä Novitan perus lankoja ollenkaan. 
     Tänne ei saa astua nälkäisenä, sillä se tulee pirun kalliiksi.</p>
-    <a href="https://www.snurre.fi">Snurren verkkokauppa</a>
+    <a href="https://www.snurre.fi" target="_blank" rel="noopener noreferrer">Snurren verkkokauppa</a>
     <p>Snurren putiikki</p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1984.7492157108616!2d24.93429937703659!3d60.168330443582605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46920bb54bf5005d%3A0xbc7539dc5549f0e7!2sLankakauppa%20Snurre!5e0!3m2!1sfi!2sfi!4v1696450927205!5m2!1sfi!2sfi" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
  <h2>Parhaat ilmaiset ohjesivustot:</h2>
  <h3>Novita</h3>
  <p>Erinomaisia ohjeita erityisesti aloittelijoille. Selkeitä ja hyvin kirjoitettuja ohjeita.</p>
- <a href="https://www.novitaknits.com/fi/neulemallit">Novitan ohjesivut</a>
+ <a href="https://www.novitaknits.com/fi/neulemallit" target="_blank" rel="noopener noreferrer">Novitan ohjesivut</a>
 
  <h3>Drops design</h3>
  <p>Laaja valikoima erikoisempiakin ohjeita. Haastavampaan makuun löytyy reilusti ohjeita.</p>
- <a href="https://www.garnstudio.com/home.php?cid=11">Drops designin ohjesivut</a>
+ <a href="https://www.garnstudio.com/home.php?cid=11" target="_blank" rel="noopener noreferrer">Drops designin ohjesivut</a>
 
  <h3>Ravelry</h3>
  <p>Jumalaton määrä eri henkilöiden kirjoittamia ohjeita. Täältä löytää ihan kaikkea taivaan ja maan väliltä. 
     Ihan mitä vain osaatkaan kuvitella, joku on siitäkin vääntänyt jo ohjeet.
     Ravelryssä on ohjeita myös myynnissä, eli kannattaa suodattaa hakutuloksia tarvittaessa. 
     Itse nettisivut on kyllä aika huonot ja käyttäjätili on muistaakseni pakko tehdä.</p>
- <a href="https://www.ravelry.com/patterns">Ravelryn ohjesivut</a> <br>  
+ <a href="https://www.ravelry.com/patterns" target="_blank" rel="noopener noreferrer">Ravelryn ohjesivut</a> <br>  
 
  <a href=index.html>
  <button class="button-52" role="link">Takaisin etusivulle</button></a>
